# lead-lag-strategies-for-japanese-and-us-sectors-using-subspa

./: .gitignore  CLAUDE.md  pyproject.toml
docs/: executive_summary.md  open_questions.md
reports/cycle_1/: metrics.json  technical_findings.md
reports/cycle_10/: metrics.json  technical_findings.md
reports/cycle_11/: metrics.json  technical_findings.md
reports/cycle_12/: metrics.json  technical_findings.md
reports/cycle_13/: metrics.json  technical_findings.md
reports/cycle_14/: metrics.json  technical_findings.md
reports/cycle_15/: metrics.json  technical_findings.md
reports/cycle_16/: metrics.json  technical_findings.md
reports/cycle_17/: metrics.json  technical_findings.md
reports/cycle_18/: metrics.json  technical_findings.md
reports/cycle_3/: metrics.json  technical_findings.md
reports/cycle_4/: metrics.json  technical_findings.md
reports/cycle_5/: metrics.json  technical_findings.md
reports/cycle_6/: metrics.json  technical_findings.md
reports/cycle_7/: metrics.json  (+1 more)
scripts/: run_advanced_strategy.py  run_baseline_comparison.py  run_cfull_validation.py  run_cost_aware_shrinkage_expanding.py  run_dynamic_multihorizon.py  run_ensemble_regime.py  run_factor_timing_riskparity.py  run_final_report.py  run_hyperparam_optimization.py  run_pc_interpretation.py  run_robustness_analysis.py  run_sector_ema_ensemble.py  run_synthetic_test.py  run_turnover_optimization.py  run_walk_forward.py  validate_data_pipeline.py
tests/: test_baselines.py  test_pca_sub.py  test_pipeline.py  test_trading_strategy.py  test_walk_forward.py
(+23 files in other folders)
